(images) Fix layout issues with floating title / data area gradient / orientation, and zoom click handler

--- a/src/app/shared/components/misc/image-viewer/image-viewer-floating-title.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer-floating-title.component.scss
@@ -1,5 +1,6 @@
 @import "../../../../styles/breakpoints";
 @import "../../../../styles/mixins";
+@import "./image-viewer-mixins";
 
 :host {
   @include darkest-background-texture;
@@ -19,6 +20,14 @@
 
   @media (max-width: $md-max) and (max-aspect-ratio: 1/1) {
     position: fixed;
+  }
+
+  @include portrait-layout {
+    display: none;
+  }
+
+  @media (max-height: 600px) {
+    display: none;
   }
 
   .image-title {
